k8s/etrain-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etrain-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etrain-frontend
  template:
    metadata:
      labels:
        app: etrain-frontend
    spec:
      containers:
        - name: etrain-frontend
          image: etrain-frontend:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: config-volume
          configMap:
            name: frontend-env
---
apiVersion: v1
kind: Service
metadata:
  name: etrain-frontend
spec:
  type: NodePort
  selector:
    app: etrain-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
