k8s/train-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: train-service
  template:
    metadata:
      labels:
        app: train-service
    spec:
      containers:
        - name: train-service
          image: train-service:1.0
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: train-service
spec:
  selector:
    app: train-service
  ports:
    - port: 8083
