k8s/etrain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etrain-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: etrain.local
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          - path: /api/train/?(.*)
            pathType: Prefix
            backend:
              service:
                name: train-service
                port:
                  number: 8082

          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8083

          # Serve frontend React app from root `/`
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: etrain-frontend
                port:
                  number: 80
